Init inventory detail page
Signed-off-by: Vincent Bisserie <vincent.bisserie@renault.com>

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
           href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
           crossorigin="anonymous">
-    <title>inventory-coop-client</title>
+    <title>Client pour inventory-coop</title>
   </head>
   <body>
     <div id="app"></div>
